--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "@coreui/react-chartjs": "^1.0.1",
     "@coreui/utils": "^1.3.1",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.3.2",
+    "add": "^2.0.6",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "core-js": "^3.8.1",
@@ -44,7 +46,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "redux": "4.0.5"
+    "redux": "4.0.5",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "auto-changelog": "~2.2.1",
