--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.8.2",
     "redux": "4.0.5",
     "yarn": "^1.22.10"
   },
